--- a/ai-projects.html
+++ b/ai-projects.html
@@ -951,19 +951,15 @@ document.addEventListener('keydown', function(event) {
                             <div style="background: #F5F7FA; padding: 1.5rem; border-radius: 8px; margin-bottom: 1.5rem;">
                                 <h4 style="color: #003D7A; margin-bottom: 1rem;">О книге:</h4>
                                 <p style="line-height: 1.8; color: #2C3E50; margin: 0;">
-                                 История, которую ты не расскажешь родителям. Пока не прочтёшь эту книгу.
-Фишинг. Шантаж. Кибербуллинг. Фейковые друзья. Цифровой след.
-Это не просто слова из учебника — это реальные угрозы, с которыми может столкнуться каждый подросток с телефоном в руках.
-"Цифровой Фантом" — это:
-
-📱 20 глав, 20 табуированных тем
-🕵️ Захватывающий детектив с настоящими героями
-🛡️ Практические знания о безопасности
-💬 Ответы на вопросы, которые стыдно задать
-
-Даша, Артём, Лиза и Стас не супергерои. Они обычные школьники, которые совершают ошибки, боятся осуждения и не всегда знают, как поступить правильно.
-Но они нашли мужество действовать. Сможешь ли ты?
-
+                                 История, которую ты не расскажешь родителям.<br> 
+                                 Пока не прочтёшь эту книгу.<br>
+                                 Фишинг. Шантаж. Кибербуллинг. Фейковые друзья. Цифровой след.<br>
+                                 Это не просто слова из учебника — это реальные угрозы,<br>
+                                 с которыми может столкнуться каждый подросток с телефоном в руках.<br><br>
+                                 Даша, Артём, Лиза и Стас не супергерои. Они обычные школьники,<br>
+                                 которые совершают ошибки, боятся осуждения и не всегда знают,<br>
+                                 как поступить правильно.<br><br>
+                                 Но они нашли мужество действовать. Сможешь ли ты?
                                 </p>
                             </div>
 
