--- a/ai-projects.html
+++ b/ai-projects.html
@@ -952,7 +952,7 @@ document.addEventListener('keydown', function(event) {
                                 <h4 style="color: #003D7A; margin-bottom: 1rem;">О книге:</h4>
                                 <p style="line-height: 1.8; color: #2C3E50; margin: 0;">
                                  История, которую ты не расскажешь родителям.<br> 
-                                 Пока не прочтёшь эту книгу.<br>
+                                 Пока не прочтёшь эту книгу.<br><br>
                                  Фишинг. Шантаж. Кибербуллинг. Фейковые друзья. Цифровой след.<br>
                                  Это не просто слова из учебника — это реальные угрозы,<br>
                                  с которыми может столкнуться каждый подросток с телефоном в руках.<br><br>
