--- a/ai-projects.html
+++ b/ai-projects.html
@@ -960,7 +960,7 @@ document.addEventListener('keydown', function(event) {
                     <div style="display: grid; grid-template-columns: 1fr 2fr; gap: 2rem; align-items: start;">
                     <!-- Обложка книги (кликабельная для полноэкранного просмотра) -->
 <div style="text-align: center;">
-    <img src="files/books/book1-cover.jpg" 
+    <img src="files/books/book1-cover.jpg.png" 
          alt="Обложка книги — кликните для увеличения" 
          id="bookCoverThumbnail"
          onclick="openFullscreenCover()"
