--- a/ai-projects.html
+++ b/ai-projects.html
@@ -1006,7 +1006,7 @@ document.addEventListener('keydown', function(event) {
     </span>
     
     <!-- Изображение обложки в полный экран -->
-    <img src="files/books/book1-cover.jpg" 
+    <img src="files/books/book1-cover.jpg.png" 
          alt="Обложка книги" 
          id="fullscreenCoverImage"
          onclick="event.stopPropagation()"
