--- a/ai-projects.html
+++ b/ai-projects.html
@@ -1104,7 +1104,7 @@ document.addEventListener('keydown', function(event) {
                                         Глава 1: Странное сообщение
                                     </h5>
                                     <p style="margin: 0; color: #7F8C8D; font-size: 0.9rem;">
-                                        Краткое описание главы 1 (1-2 предложения)
+                                       На тренировке Даша узнает о списании денег с игрового аккаунта, подруги по команде получают сранные сообщения от неизвестного бота.
                                     </p>
                                 </div>
                                 <div style="display: flex; align-items: center; gap: 1rem;">
@@ -1137,10 +1137,10 @@ document.addEventListener('keydown', function(event) {
                                  style="padding: 1.25rem; background: #F5F7FA; cursor: pointer; display: flex; justify-content: space-between; align-items: center; transition: background 0.3s ease;">
                                 <div style="flex: 1;">
                                     <h5 style="color: #003D7A; margin: 0 0 0.5rem 0; font-size: 1.2rem;">
-                                        Глава 2: Название второй главы
+                                        Глава 2: Бот-помощник
                                     </h5>
                                     <p style="margin: 0; color: #7F8C8D; font-size: 0.9rem;">
-                                        Краткое описание главы 2
+                                     Лиза подписывается на бота для помощи с уроками, постепенно втягивается в зависимость, получает личные вопросы от бота.
                                     </p>
                                 </div>
                                 <div style="display: flex; align-items: center; gap: 1rem;">
