--- a/ai-projects.html
+++ b/ai-projects.html
@@ -1050,6 +1050,9 @@ document.addEventListener('keydown', function(event) {
                                     <strong>Создано с помощью:</strong> 
                                     <span style="display: inline-block; padding: 0.25rem 0.75rem; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border-radius: 15px; font-size: 0.85rem; font-weight: 600; margin-left: 0.5rem;">Claude AI</span>
                                 </p>
+                                 <p style="margin: 0.5rem 0; color: #2C3E50;">
+                                    <strong>Примечание:</strong> При копировании ссылка на источник обязательна
+                                </p>
                             </div>
 
                             <!-- Описание книги -->
@@ -1104,7 +1107,7 @@ document.addEventListener('keydown', function(event) {
                                         Глава 1: Странное сообщение
                                     </h5>
                                     <p style="margin: 0; color: #7F8C8D; font-size: 0.9rem;">
-                                       На тренировке Даша узнает о списании денег с игрового аккаунта, подруги по команде получают сранные сообщения от неизвестного бота.
+                                       На тренировке Даша узнает о списании денег с игрового аккаунта, подруги по команде получают странные сообщения от неизвестного бота.
                                     </p>
                                 </div>
                                 <div style="display: flex; align-items: center; gap: 1rem;">
