--- a/ai-projects.html
+++ b/ai-projects.html
@@ -1038,7 +1038,7 @@ document.addEventListener('keydown', function(event) {
                             
                             <div style="margin-bottom: 1.5rem;">
                                 <p style="margin: 0.5rem 0; color: #2C3E50;">
-                                    <strong>Автор:</strong> Дёмин А.Ю.
+                                    <strong>Автор:</strong> © А.Ю.Дёмин, 2025
                                 </p>
                                 <p style="margin: 0.5rem 0; color: #2C3E50;">
                                     <strong>Жанр:</strong> Образовательный детектив для подростков
