--- a/ai-projects.html
+++ b/ai-projects.html
@@ -504,7 +504,7 @@ document.addEventListener('keydown', function(event) {
     </header>
 
     <main>
-        <h1 class="page-title">🤖 Искусственный интеллект в образовании</h1>
+        <h1 class="page-title">Искусственный интеллект в образовании</h1>
         
         <div class="page-intro">
             <p><strong>Нейросети как инструмент современного образования</strong></p>
