--- a/metodika.html
+++ b/metodika.html
@@ -2078,7 +2078,7 @@ document.addEventListener('keydown', function(event) {
                 margin-bottom: 0;
                 box-shadow: 0 4px 12px rgba(0,61,122,0.2);">
         <h2 style="margin: 0; font-size: 1.5rem; font-weight: 600; display: flex; align-items: center; gap: 0.75rem;">
-            🎨 Презентации и наглядные материалы
+            🎨 Презентации, наглядные материалы, тесты и контрольные
             <span style="font-size: 0.85rem; opacity: 0.9; margin-left: 0.5rem;">(нажмите для раскрытия)</span>
         </h2>
         <span class="section-accordion-icon" style="font-size: 1.8rem; transition: transform 0.3s ease;">▼</span>
