--- a/metodika.html
+++ b/metodika.html
@@ -451,7 +451,7 @@
             padding: 1.5rem;
             border-radius: 12px;
             margin-bottom: 1.5rem;
-            border-left: 4px solid var(--color-success);
+            border-left: 4px solid var(--color-primary); 
             transition: all 0.3s ease;
         }
 
@@ -462,7 +462,7 @@
         }
 
         .recommendation-card h3 {
-            color: var(--color-success);
+            color: var(--color-primary);
             margin-bottom: 1rem;
             font-size: 1.2rem;
         }
@@ -484,7 +484,7 @@
             content: "✓";
             position: absolute;
             left: 0;
-            color: var(--color-success);
+            color: var(--color-primary);
             font-weight: bold;
         }
 
@@ -1358,9 +1358,9 @@
                         <p style="margin-top: 1rem;">
                             <a href="files/recommendations/metodichka-effektivnoe-prepodavanie.pdf" 
                                download 
-                               style="display: inline-block; padding: 0.75rem 1.5rem; background: var(--color-success); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(76, 175, 80, 0.3);"
-                               onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(76, 175, 80, 0.4)';"
-                               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 8px rgba(76, 175, 80, 0.3)';">
+                               style="display: inline-block; padding: 0.75rem 1.5rem; background: var(--color-primary); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; transition: all 0.3s ease; box-shadow: 0 2px 8px rgba(0, 61, 122, 0.3);"
+                               onmouseover="this.style.transform='translateY(-2px)'; this.style.boxShadow='0 4px 12px rgba(0, 61, 122, 0.4)';"
+                               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 2px 8px rgba(0, 61, 122, 0.3)';">
                                 📥 Скачать полную методичку (PDF)
                             </a>
                         </p>
