--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@ section h2 {
                     <li class="has-submenu">
                         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - Творческие проекты</a></li>
+                            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
                             <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
@@ -1317,7 +1317,7 @@ section h2 {
                         </div>
                     </li>
                 </ul>
-                <a href="novosti.html" class="news-button">Вся актуальная информация</a>
+               <a href="novosti.html?filter=announcement" class="news-button">Вся актуальная информация</a>
             </div>
         </section>
     </main>
@@ -1570,4 +1570,5 @@ section h2 {
         });
     </script>
 </body>
+
 </html>
