--- a/about.html
+++ b/about.html
@@ -645,7 +645,7 @@ document.addEventListener('keydown', function(event) {
     <li class="has-submenu">
         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
         <ul class="submenu">
-            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - Творческие проекты</a></li>
+            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - творческие проекты</a></li>
             <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
             <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
@@ -735,7 +735,7 @@ document.addEventListener('keydown', function(event) {
       <section id="obrazovanie">
     <div class="info-card">
         <h2>🎓 Образование</h2>
-        <p><em>Нижегородская академия МВД России, 2001 год, юрист</em></p>
+        <p><em>Нижегородская академия МВД России, Юриспруденция, 2001 год</em></p>
         <a href="obrazovanie.html" class="info-card-button">Диплом →</a>
     </div>
 </section>  
@@ -1128,6 +1128,7 @@ function toggleMenu() {
 </script>
 </body>
 </html>
+
 
 
 
