--- a/about.html
+++ b/about.html
@@ -718,7 +718,7 @@ document.addEventListener('keydown', function(event) {
                     </li>
                     <li><strong>Внеурочная деятельность:</strong> 
                         <div style="margin-left: 0; margin-top: 0.5rem;">
-                            Юнармия<br>
+                            Юнармейский отряд<br>
                             Юные инспекторы движения (ЮИД)
                         </div>
                     </li>
@@ -1128,6 +1128,7 @@ function toggleMenu() {
 </script>
 </body>
 </html>
+
 
 
 
