--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@ section h2 {
                             <li>Подготовка к контрольным и тестам</li>
                         </ul>
                     </div>
-                    <a href="ai-projects.html#dlya-uchenikov" class="info-block-button">Перейти к материалам</a>
+                    <a href="ai-dlya-uchenikov" class="info-block-button">Перейти к материалам</a>
                 </div>
 
                 <!-- БЛОК 2: Для родителей (БЕЛЫЙ) -->
@@ -1572,3 +1572,4 @@ section h2 {
 </body>
 
 </html>
+
