--- a/portfolio.html
+++ b/portfolio.html
@@ -827,7 +827,7 @@
                     <li>Итоги спортивных состязаний и патриотических конкурсов </li>
                     <li>Исследовательские проектные работы учащихся</li>
                 </ul>
-                <a href="detalnaya-stranica-3.html" class="info-block-button">Подробнее</a>
+                <a href="dostizheniya-uchenikov.html" class="info-block-button">Подробнее</a>
             </div>
 
             <!-- БЛОК 3 (светлый фон - альтернатива) -->
@@ -1163,4 +1163,5 @@
         });
     </script>
 </body>
+
 </html>
