--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -691,13 +691,13 @@
                     <li class="has-submenu">
                         <a href="about.html" class="active">О себе</a>
                         <ul class="submenu">
-                            <li><a href="obrazovanie.html" class="active">Образование</a></li>
+                            <li><a href="obrazovanie.html">Образование</a></li>
                             <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
                             <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="portfolio.html">Портфолио</a>
+                        <a href="portfolio.html" class="active">Портфолио</a>
                         <ul class="submenu">
                             <li><a href="rezultaty-obucheniya.html">Результаты освоения ОБЗР</a></li>
                             <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
@@ -720,7 +720,7 @@
                             <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej.html">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
-                            <li><a href="ai-poleznye-resursy.html">Полезные ресурсы по ИИ вобразовании</a></li>
+                            <li><a href="ai-projects.html#ai-poleznye-resursy">Полезные ресурсы по ИИ вобразовании</a></li>
                         </ul>
                     </li>
                     <li class="has-submenu">
@@ -1567,3 +1567,4 @@
 </script>
 </body>
 </html>
+
