--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -689,7 +689,7 @@
                         </ul>
                     </li>
                     <li class="has-submenu">
-                        <a href="about.html" class="active">О себе</a>
+                        <a href="about.html">О себе</a>
                         <ul class="submenu">
                             <li><a href="obrazovanie.html">Образование</a></li>
                             <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
@@ -1567,4 +1567,5 @@
 </script>
 </body>
 </html>
+
 
