--- a/literature-projects.html
+++ b/literature-projects.html
@@ -912,7 +912,7 @@
     <!-- Модальное окно для обложки -->
     <div id="coverModal" onclick="closeCoverModal()">
         <span class="close-btn" onclick="closeCoverModal()">&times;</span>
-        <img src="files/books/book1-cover.png" alt="Обложка книги" onclick="event.stopPropagation()">
+        <img src="files/books/book1-cover.jpg.png" alt="Обложка книги" onclick="event.stopPropagation()">
         <p class="hint">Кликните вне изображения или нажмите ESC для закрытия</p>
     </div>
 
@@ -1456,3 +1456,4 @@
 </body>
 
 </html>
+
