--- a/obrazovanie.html
+++ b/obrazovanie.html
@@ -743,9 +743,8 @@
         <!-- Слайдер изображений -->
     <div class="gallery-slider">
         <div class="slider-wrapper">
-            <img src="images/diploma-page1.jpg" alt="Диплом страница 1" class="slider-image active">
-            <img src="images/diploma-page2.jpg" alt="Диплом страница 2" class="slider-image">
-            <img src="images/diploma-page3.jpg" alt="Диплом страница 3" class="slider-image">
+            <img src="images/moi-dostizheniya/diploma-page1.jpg" alt="Диплом страница 1" class="slider-image active">
+            <img src="images/moi-dostizheniya/diploma-page2.jpg" alt="Диплом страница 2" class="slider-image">
         </div>
         
         <!-- Кнопки навигации -->
@@ -1339,6 +1338,7 @@
                 const nextBtn = slider.querySelector('.slider-btn.next');
                 const prevBtn = slider.querySelector('.slider-btn.prev');
                 
+
                             if (diff > 0 && nextBtn) {
                     changeSlide(nextBtn, 1);
                 } else if (diff < 0 && prevBtn) {
