--- a/nagrady.html
+++ b/nagrady.html
@@ -739,12 +739,12 @@
    
  <div class="gallery-item">
                 <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                    <img src="images/moi-dostizheniya/blagodarnost-gvardeets-2023.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Благодарственное письмо</h3>
+                    <p class="gallery-item-description">За активное участие в проведении военных сборов в УЦ "Гвардеец"</p>
+                    <p class="gallery-item-date">📅 2023 год</p>
                 </div>
             </div>
 
@@ -1345,6 +1345,7 @@ function openEmblemLightbox() {
 </body>
 
 </html>
+
 
 
 
