--- a/nagrady.html
+++ b/nagrady.html
@@ -738,7 +738,7 @@
         <div class="gallery-grid">
    
  <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/blagodarnost-gvardeets-2023.jpg', 'Описание для lightbox')">
                     <img src="images/moi-dostizheniya/blagodarnost-gvardeets-2023.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
@@ -749,13 +749,13 @@
             </div>
 
  <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/gramota-upravlenie-obrazovaniya.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/gramota-upravlenie-obrazovaniya.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Почетная грамота</h3>
+                    <p class="gallery-item-description">За профессионализм, добросовестный труд и умелую организацию образовательного процесса</p>
+                    <p class="gallery-item-date">📅 2025 год</p>
                 </div>
             </div>
    
@@ -1345,6 +1345,7 @@ function openEmblemLightbox() {
 </body>
 
 </html>
+
 
 
 
