--- a/nagrady.html
+++ b/nagrady.html
@@ -754,7 +754,7 @@
                 </div>
                 <div class="gallery-item-content">
                     <h3 class="gallery-item-title">Почетная грамота</h3>
-                    <p class="gallery-item-description">За профессионализм, добросовестный труд и умелую организацию образовательного процесса</p>
+                    <p class="gallery-item-description">За профессионализм и добросовестный труд</p>
                     <p class="gallery-item-date">📅 2025 год</p>
                 </div>
             </div>
@@ -1345,6 +1345,7 @@ function openEmblemLightbox() {
 </body>
 
 </html>
+
 
 
 
