--- a/perepodgotovka.html
+++ b/perepodgotovka.html
@@ -738,35 +738,35 @@
         <div class="gallery-grid">
 
  <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/diplom-impuls-2023.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/diplom-impuls-2023.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Диплом о профессиональной переподготовке</h3>
+                    <p class="gallery-item-description">Педагогическое образование: учитель основ безопасности жизнедеятельности</p>
+                    <p class="gallery-item-date">📅 2023 год</p>
                 </div>
             </div>
 
  <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/perepodgotovka-2024-2.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/perepodgotovka-2024-2.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Удостоверение о повышении квалификации</h3>
+                    <p class="gallery-item-description">Особенности преподавания учебного предмета ОБЗР</p>
+                    <p class="gallery-item-date">📅 2024 год</p>
                 </div>
             </div>
 
  <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/povyshenie-niro-2025.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/povyshenie-niro-2025.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Удостоверение о повышении квалификации</h3>
+                    <p class="gallery-item-description">Учебный предмет "ОБЗР": практико-ориентированное обучение</p>
+                    <p class="gallery-item-date">📅 2025 год</p>
                 </div>
             </div>
 
@@ -1388,6 +1388,7 @@ function openEmblemLightbox() {
 </body>
 
 </html>
+
 
 
 
