--- a/obrazovanie.html
+++ b/obrazovanie.html
@@ -728,7 +728,7 @@
         <h2 class="page-title">🎓 Образование</h2>
         
         <p class="page-subtitle">
-            Дипломы, сертификаты и документы об образовании. Нажмите на изображение для увеличения.
+            Документы об образовании. Нажмите на изображение для увеличения.
         </p>
 
         <!-- ============================================
@@ -1398,4 +1398,5 @@
 </script>
 </body>
 </html>
+
 
