--- a/perepodgotovka.html
+++ b/perepodgotovka.html
@@ -771,13 +771,24 @@
             </div>
 
 <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/perepodgotovka-2023.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/perepodgotovka-2023.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Удостоверение о повышении квалификации</h3>
+                    <p class="gallery-item-description">Основы военной подготовки в школе</p>
+                    <p class="gallery-item-date">📅 2023 год</p>
+                </div>
+            </div>
+
+<div class="gallery-item">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/perepodgotovka-2024.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/perepodgotovka-2024.jpg" alt="Краткое описание">
+                </div>
+                <div class="gallery-item-content">
+                    <h3 class="gallery-item-title">Удостоверение о повышении квалификации</h3>
+                    <p class="gallery-item-description">Содержание и методика преподавания предмета ОБЗР</p>
+                    <p class="gallery-item-date">📅 2024 год</p>
                 </div>
             </div>
 
@@ -786,20 +797,9 @@
                     <img src="images/ваш-файл.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
-                </div>
-            </div>
-
-<div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
-                </div>
-                <div class="gallery-item-content">
-                    <h3 class="gallery-item-title">Название документа</h3>
-                    <p class="gallery-item-description">Подробное описание документа или фотографии</p>
-                    <p class="gallery-item-date">📅 Год</p>
+                    <h3 class="gallery-item-title">Удостоверение о повышении квалификации</h3>
+                    <p class="gallery-item-description">Инновационные технологии работы с детьми с ОВЗ</p>
+                    <p class="gallery-item-date">📅 2024 год</p>
                 </div>
             </div>
 </div>
@@ -1388,6 +1388,7 @@ function openEmblemLightbox() {
 </body>
 
 </html>
+
 
 
 
