--- a/perepodgotovka.html
+++ b/perepodgotovka.html
@@ -793,8 +793,8 @@
             </div>
 
 <div class="gallery-item">
-                <div class="gallery-item-image" onclick="openLightbox('images/ваш-файл.jpg', 'Описание для lightbox')">
-                    <img src="images/ваш-файл.jpg" alt="Краткое описание">
+                <div class="gallery-item-image" onclick="openLightbox('images/moi-dostizheniya/povyshenie-niro-2024.jpg', 'Описание для lightbox')">
+                    <img src="images/moi-dostizheniya/povyshenie-niro-2024.jpg" alt="Краткое описание">
                 </div>
                 <div class="gallery-item-content">
                     <h3 class="gallery-item-title">Удостоверение о повышении квалификации</h3>
@@ -1388,6 +1388,7 @@ function openEmblemLightbox() {
 </body>
 
 </html>
+
 
 
 
