--- a/literature-projects.html
+++ b/literature-projects.html
@@ -892,11 +892,11 @@
         <div class="header-top">
             <div class="header-content">
                 <div class="header-title">
-                    <img src="images/emblem-obzr.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openEmblemLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+                    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openEmblemLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
                     
                     <div id="emblem-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; justify-content: center; align-items: center;" onclick="closeEmblemLightbox()">
                         <span style="position: absolute; top: 20px; right: 40px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; transition: color 0.3s;" onmouseover="this.style.color='#E53935'" onmouseout="this.style.color='white'">&times;</span>
-                        <img src="images/emblem-obzr.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
+                        <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
                     </div>
                     
                     <div>
@@ -1010,7 +1010,7 @@
                     <!-- Карточка книги 1 -->
                     <div class="library-card">
                         <div class="library-card-cover">
-                            <img src="files/books/book1-cover.jpg" alt="Обложка: Цифровой фантом">
+                            <img src="files/books/book1-cover.jpg.png" alt="Обложка: Цифровой фантом">
                         </div>
                         <div class="library-card-content">
                             <h4>Цифровой фантом</h4>
@@ -1064,7 +1064,7 @@
                 <div class="book-grid">
                     <!-- Обложка -->
                     <div class="book-cover-wrapper">
-                        <img src="files/books/book1-cover.jpg" 
+                        <img src="files/books/book1-cover.jpg.png" 
                              alt="Обложка книги — кликните для увеличения" 
                              onclick="openCoverModal()">
                         <p class="book-cover-hint">Кликните для полноэкранного просмотра</p>
@@ -1174,7 +1174,7 @@
     <!-- Модальное окно для обложки -->
     <div id="coverModal" onclick="closeCoverModal()">
         <span class="close-btn" onclick="closeCoverModal()">&times;</span>
-        <img src="files/books/book1-cover.jpg" alt="Обложка книги" onclick="event.stopPropagation()">
+        <img src="files/books/book1-cover.jpg.png" alt="Обложка книги" onclick="event.stopPropagation()">
         <p class="hint">Кликните вне изображения или нажмите ESC для закрытия</p>
     </div>
 
