--- a/literature-projects.html
+++ b/literature-projects.html
@@ -242,7 +242,7 @@
 
         .library-title {
             color: white;
-            font-size: 1.2rem;
+            font-size: 1rem;
             margin: 0;
             font-weight: 700;
             text-align: left;
@@ -250,7 +250,7 @@
 
         .library-toggle-icon {
             color: white;
-            font-size: 1.2rem;
+            font-size: 1rem;
             transition: transform 0.3s ease;
             line-height: 1;
         }
@@ -1167,7 +1167,6 @@
 
         </div>
 
-        <p class="placeholder-text">💡 Здесь могут быть добавлены другие литературные проекты</p>
         
     </main>
 
@@ -1484,7 +1483,7 @@
                         display: inline-block;
                         box-shadow: 0 4px 15px rgba(0, 61, 122, 0.15);
                         max-width: 100%;">
-                <img src="images/qr-code-obzr.png" 
+                <img src="images/qr-code-obzr.png.png" 
                      alt="QR-код сайта преподавателя ОБЗР" 
                      style="width: 100%;
                             max-width: 240px;
