--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -788,7 +788,7 @@
         <!-- Слайдер изображений -->
         <div class="gallery-slider">
             <div class="slider-wrapper">
-                <img src="images/olimpiada-1.jpg" alt="Почетная грамота победителя олимпиады — Анастасия Л., 10 класс" class="slider-image active">
+                <img src="images/dostizheniya-uchenikov/olimpiada-2023-1.jpg" alt="Почетная грамота победителя олимпиады — Лазарева Анастасия, 10 класс" class="slider-image active">
                 <img src="images/olimpiada-2.jpg" alt="Почетная грамота призера олимпиады — Арина С., 10 класс" class="slider-image">
             </div>
             
@@ -1567,5 +1567,6 @@
 </script>
 </body>
 </html>
+
 
 
