--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -510,15 +510,12 @@
  /* ========================================== */
     /* СТИЛИ ДЛЯ СЛАЙДЕРА */
     /* ========================================== */
-   
-.gallery-slider {
-    position: relative;
-    aspect-ratio: 16/9;  /* ← меньше высота, кнопки видны */
-    max-height: 400px;   /* ← ограничение по высоте */
+  .gallery-slider {
+    aspect-ratio: 210/297;  /* Пропорции A4 */
+    max-height: 600px;
     background: var(--color-surface);
-    overflow: hidden;
-    border-radius: 8px 8px 0 0;
-}
+} 
+
     .slider-wrapper {
         width: 100%;
         height: 100%;
@@ -1581,6 +1578,7 @@
 </script>
 </body>
 </html>
+
 
 
 
