--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -899,7 +899,7 @@
             <h4>Районная игра <br>
                 "Зарница 2.0" 2024</h4>
             <div class="gallery-meta">
-                <span class="gallery-tag">📅 Vfhn 2024</span>
+                <span class="gallery-tag">📅 Март 2024</span>
                 <span class="gallery-tag">📄 11 грамот</span>
             </div>
         </div>
@@ -1578,6 +1578,7 @@
 </script>
 </body>
 </html>
+
 
 
 
