--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -771,7 +771,7 @@
     <h3 style="color: #FFA500; margin-bottom: 0.5rem; font-size: 1.2rem;">⚠️ Соблюдение конфиденциальности</h3>
     <p style="color: var(--color-text-primary); margin: 0;">В соответствии с ФЗ-152 "О персональных данных", все изображения грамот и дипломов публикуются с согласия родителей (законных представителей) учащихся.</p>
 </div>
-    
+     <div class="gallery-grid">
     <!-- ========================================== -->
     <!-- БЛОК 1: ОЛИМПИАДЫ ПО ОБЗР -->
     <!-- ========================================== -->
@@ -1577,6 +1577,7 @@
 </script>
 </body>
 </html>
+
 
 
 
