--- a/dostizheniya-uchenikov.html
+++ b/dostizheniya-uchenikov.html
@@ -511,12 +511,12 @@
  /* ========================================== */
     /* СТИЛИ ДЛЯ СЛАЙДЕРА */
     /* ========================================== */
-  .gallery-slider {
-    position: relative;        /* ← ДОБАВИТЬ */
-    aspect-ratio: 16/9;        /* ← Или оставить 210/297, если нужен вертикальный формат */
-    max-height: 400px;         /* ← Или оставить 600px */
+ .gallery-slider {
+    position: relative;
+    aspect-ratio: 3/4;      /* ИЗМЕНЕНО */
+    max-height: 500px;      /* ИЗМЕНЕНО */
     background: var(--color-surface);
-    overflow: hidden;          /* ← ДОБАВИТЬ */
+    overflow: hidden;
     border-radius: 8px 8px 0 0;
 }
 
@@ -525,18 +525,18 @@
         height: 100%;
         position: relative;
     }
-
-    .slider-image {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-        opacity: 0;
-        transition: opacity 0.5s ease;
-    }
-
+.slider-image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;     /* ИЗМЕНЕНО */
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    background: white;       /* ДОБАВЛЕНО */
+}
+   
     .slider-image.active {
         opacity: 1;
         z-index: 1;
@@ -600,13 +600,17 @@
     }
 
     /* Адаптивность для мобильных */
-    @media (max-width: 768px) {
-        .slider-btn {
-            width: 35px;
-            height: 35px;
-            font-size: 1.2rem;
-        }
+ @media (max-width: 768px) {
+    .slider-btn {
+        width: 35px;
+        height: 35px;
+        font-size: 1.2rem;
     }
+    
+    .gallery-slider {
+        max-height: 400px;   /* ДОБАВЛЕНО */
+    }
+}
        .gallery-info {
         padding: 1.5rem;
     }
@@ -1600,6 +1604,7 @@ main > .slider-btn,
 </script>
 </body>
 </html>
+
 
 
 
