--- a/metodika.html
+++ b/metodika.html
@@ -792,7 +792,7 @@
                 <ul>
                     <li>КТП с распределением часов по модулям и темам</li>
                     <li>Актуализировано под новые федеральные рабочие программы</li>
-                    <li>Удобные для редактирования файлы (Word/PDF) для адаптации под специфику школы</li>
+                    <li>Удобные для редактирования под специфику школы файлы</li>
                 </ul>
                 <a href="detalnaya-stranica-2.html" class="info-block-button">Подробнее</a>
             </div> 
@@ -1200,6 +1200,7 @@
 
 
          
+
 
 
 
