--- a/metodika.html
+++ b/metodika.html
@@ -720,7 +720,7 @@
                     </li>
 
                     <li class="has-submenu">
-                        <a href="ai-projects.html" class="active" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
+                        <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
                             <li><a href="ai-dlya-uchenikov">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-dlya-roditelej">Для родителей - практические материалы</a></li>
@@ -794,7 +794,7 @@
                     <li>Актуализировано под новые федеральные рабочие программы</li>
                     <li>Удобные для редактирования под специфику школы файлы</li>
                 </ul>
-                <a href="detalnaya-stranica-2.html" class="info-block-button">Подробнее</a>
+                <a href="normativnaya-dokumentaciya.html" class="info-block-button">Подробнее</a>
             </div> 
 
             <!-- БЛОК 2 (синий фон) -->
@@ -1200,6 +1200,7 @@
 
 
          
+
 
 
 
