--- a/normativnaya-dokumentaciya.html
+++ b/normativnaya-dokumentaciya.html
@@ -770,7 +770,7 @@
                             <span class="document-icon">📕</span>
                             <span class="document-title">Рабочая программа OBZR 10-11 классы</span>
                         </div>
-                        <a href="#" class="download-link">
+                        <a href="rp-obzr-10-11.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
