--- a/normativnaya-dokumentaciya.html
+++ b/normativnaya-dokumentaciya.html
@@ -815,7 +815,7 @@
                             <span class="document-icon">📘</span>
                             <span class="document-title">Рабочая программа ОБЗР 8-9 классы</span>
                         </div>
-                        <a href="rp-obzr-8-9.pdf.pdf.pdf" class="download-link">
+                        <a href="documents/rp-obzr-8-9.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
@@ -826,7 +826,7 @@
                             <span class="document-icon">📕</span>
                             <span class="document-title">Рабочая программа OBZR 10-11 классы</span>
                         </div>
-                        <a href="rp-obzr-10-11.pdf.pdf.pdf" class="download-link">
+                        <a href="documents/rp-obzr-10-11.pdf.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
@@ -842,7 +842,7 @@
                             <span class="document-icon">📋</span>
                             <span class="document-title">КТП 8 класс</span>
                         </div>
-                        <a href="#" class="download-link">
+                        <a href="documents/ktp-8-klass.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
@@ -853,7 +853,7 @@
                             <span class="document-icon">📋</span>
                             <span class="document-title">КТП 9 класс</span>
                         </div>
-                        <a href="#" class="download-link">
+                        <a href="documents/ktp-9-klass.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
@@ -864,7 +864,7 @@
                             <span class="document-icon">📋</span>
                             <span class="document-title">КТП 10 класс</span>
                         </div>
-                        <a href="#" class="download-link">
+                        <a href="documents/ktp-10-klass.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
@@ -875,7 +875,7 @@
                             <span class="document-icon">📋</span>
                             <span class="document-title">КТП 11 класс</span>
                         </div>
-                        <a href="#" class="download-link">
+                        <a href="documents/ktp-11-klass.pdf.pdf" class="download-link">
                             <span>Скачать PDF</span>
                             <span>⬇️</span>
                         </a>
