--- a/index.html
+++ b/index.html
@@ -1075,16 +1075,16 @@ section h2 {
                         <a href="index.html" class="active" onclick="return handleSubmenuClick(event, this)">Главная</a>
                         <ul class="submenu">
                             <li><a href="o-predmete-obzr.html">О предмете ОБЗР</a></li>
-                            <li><a href="#novosti">Последние новости</a></li>
+                            <li><a href="novosti.html">Последние новости</a></li>
                         </ul>
                     </li>
 
                     <li class="has-submenu">
                         <a href="about.html" onclick="return handleSubmenuClick(event, this)">О себе</a>
                         <ul class="submenu">
-                            <li><a href="about.html#obrazovanie">Образование</a></li>
-                            <li><a href="about.html#perepodgotovka">Переподготовка и повышение квалификации</a></li>
-                            <li><a href="about.html#nagrady">Награды и достижения</a></li>
+                            <li><a href="obrazovanie.html">Образование</a></li>
+                            <li><a href="perepodgotovka.html">Переподготовка и повышение квалификации</a></li>
+                            <li><a href="nagrady.html">Награды и достижения</a></li>
                         </ul>
                     </li>
 
@@ -1092,7 +1092,7 @@ section h2 {
                         <a href="portfolio.html" onclick="return handleSubmenuClick(event, this)">Портфолио</a>
                         <ul class="submenu">
                             <li><a href="portfolio.html#rezultaty-obucheniya">Результаты освоения ОБЗР обучающимися</a></li>
-                            <li><a href="portfolio.html#dostizheniya-uchenikov">Достижения учащихся</a></li>
+                            <li><a href="dostizheniya-uchenikov.html">Достижения учащихся</a></li>
                             <li><a href="portfolio.html#metodicheskaya-aktivnost">Методическая активность</a></li>
                             <li><a href="portfolio.html#dokumenty">Документы портфолио</a></li>
                         </ul>
@@ -1101,7 +1101,7 @@ section h2 {
                     <li class="has-submenu">
                         <a href="metodika.html" onclick="return handleSubmenuClick(event, this)">Методика</a>
                         <ul class="submenu">
-                            <li><a href="metodika.html#normativnaya-dokumentaciya">Нормативная документация</a></li>
+                            <li><a href="normativnaya-dokumentaciya.html">Нормативная документация</a></li>
                             <li><a href="metodika.html#konspekty-urokov">Конспекты уроков по модулям</a></li>
                             <li><a href="metodika.html#prezentacii-testy">Презентации, наглядные материалы, тесты и контрольные</a></li>
                             <li><a href="metodika.html#metodicheskie-rekomendacii">Методические рекомендации для коллег</a></li>
@@ -1111,7 +1111,7 @@ section h2 {
                     <li class="has-submenu">
                         <a href="ai-projects.html" onclick="return handleSubmenuClick(event, this)">ИИ в образовании</a>
                         <ul class="submenu">
-                            <li><a href="ai-projects.html#dlya-uchenikov">Для учеников - творческие проекты</a></li>
+                            <li><a href="ai-dlya-uchenikov.html">Для учеников - творческие проекты</a></li>
                             <li><a href="ai-projects.html#dlya-roditelej">Для родителей - практические материалы</a></li>
                             <li><a href="ai-dlya-kolleg.html">Для коллег - методические материалы</a></li>
                             <li><a href="ai-projects.html#poleznye-resursy">Полезные ресурсы по ИИ в образовании</a></li>
@@ -1572,5 +1572,6 @@ section h2 {
 </body>
 
 </html>
+
 
 
