--- a/normativnaya-dokumentaciya.html
+++ b/normativnaya-dokumentaciya.html
@@ -650,7 +650,7 @@
                         display: inline-block;
                         box-shadow: 0 4px 15px rgba(0, 61, 122, 0.15);
                         max-width: 100%;">
-                <img src="images/qr-code-obzr.png.png" 
+                <img src="qr-code-obzr.png.png" 
                      alt="QR-код сайта преподавателя ОБЗР" 
                      style="width: 100%;
                             max-width: 240px;
