--- a/o-predmete-obzr.html
+++ b/o-predmete-obzr.html
@@ -879,7 +879,7 @@
     <div class="section">
         <h2 style="font-size: 2rem; color: var(--color-primary); margin-bottom: 0.5rem; padding-bottom: 0.75rem; border-bottom: 3px solid var(--color-danger);">О предмете ОБЗР</h2>
         
-<div style="background-color: #EFF6FB;
+<div style="background-color: #F0F7FF;
             border: 2px solid var(--color-border); 
             border-radius: 10px; 
             padding: 1.75rem 2rem; 
@@ -1418,3 +1418,4 @@
 </body>
 
 </html>
+
