--- a/novosti.html
+++ b/novosti.html
@@ -466,6 +466,19 @@
             background: #b71c1c;
             border-color: #b71c1c;
         }
+        * Кнопка Медиаархив */
+.filter-btn.media-archive {
+    background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+    color: white;
+    border-color: #667eea;
+}
+
+.filter-btn.media-archive:hover {
+    background: linear-gradient(135deg, #764ba2 0%, #667eea 100%);
+    border-color: #764ba2;
+    transform: translateY(-2px);
+    box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+}
         
         footer {
             background-color: var(--color-primary);
@@ -826,6 +839,9 @@
             <button class="filter-btn" onclick="filterNews('achievement')">Достижения</button>
             <button class="filter-btn" onclick="filterNews('competition')">Конкурсы</button>
             <button class="filter-btn announcements" onclick="filterNews('announcement')">📢 Анонсы предстоящих событий</button>
+            <a href="mediaarhiv.html" class="filter-btn" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; border-color: #667eea; text-decoration: none; display: inline-flex; align-items: center; gap: 0.5rem;">
+               📸 Медиаархив
+            </a>
         </div>
 
         <!-- Новостная лента -->
