--- a/mediaarhiv.html
+++ b/mediaarhiv.html
@@ -786,7 +786,7 @@
                         display: inline-block;
                         box-shadow: 0 4px 15px rgba(0, 61, 122, 0.15);
                         max-width: 100%;">
-                <img src="images/qr-code-obzr.png" 
+                <img src="qr-code-obzr.png.png" 
                      alt="QR-код сайта преподавателя ОБЗР" 
                      style="width: 100%;
                             max-width: 240px;
@@ -828,11 +828,11 @@
         <div class="header-top">
             <div class="header-content">
                 <div class="header-title">
-                    <img src="images/emblem-obzr.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openEmblemLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+                    <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" onclick="openEmblemLightbox()" style="width: 80px; height: 80px; margin-right: 1rem; object-fit: contain; filter: drop-shadow(0 3px 10px rgba(0,0,0,0.25)); cursor: pointer; transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
 
                     <div id="emblem-lightbox" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; justify-content: center; align-items: center;" onclick="closeEmblemLightbox()">
                         <span style="position: absolute; top: 20px; right: 40px; color: white; font-size: 40px; font-weight: bold; cursor: pointer; transition: color 0.3s;" onmouseover="this.style.color='#E53935'" onmouseout="this.style.color='white'">&times;</span>
-                        <img src="images/emblem-obzr.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
+                        <img src="images/emblem-obzr.png.png" alt="Эмблема ОБЗР СШ 2 Лысково" style="max-width: 80%; max-height: 80%; object-fit: contain; animation: zoomIn 0.3s ease;" onclick="event.stopPropagation()">
                     </div>
 
                     <div>
